# sat-track

./: .gitignore  README.md  run_presentation.sh
Arduino/helmet/: helmet.ino
Code/ShowSats/: Makefile  show_sats.c
Code/TraceGenerator/: CMakeLists.txt
Code/TraceGenerator/include/: DateTime.h
Code/TraceGenerator/src/: DateTime.cpp  ECI.cpp  Geodetic.cpp  SGP4.cpp  trace_generator.cpp
Data/TLE/: test.txt
Scripts/: animated_trace.py  beyond_demo.py  generate_positions.py  plot_satellite.py  satplot_demo.py  visualization.py  visualization_alpha.py  visualization_beta.py  visualization_final.py
Scripts/Old/: plot_satellite.py  pygame_demo.py  show_gif.py  trace2.py  visualization.py
Scripts/Wprawki/: mercator.py
